app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.all-things {
  display: grid;
  grid-template-columns: .25fr 1fr;
  padding: 50px 0 0 0;
  font-family: "Merriweather", "Georgia", serif;

}
.logged-in-nav, .logged-out-nav {
  display: flex;
  color: #382110;
  background: #F4F1EA;
  align-items: center;
  width: 100%;
  justify-content: space-between;
  position: absolute;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, .4);
  height: 50px;
}

.current-user {
  font-size: 16px;
}

.nav-logo {
  font-size: 28px;
  margin-left: 120px;
  text-decoration: none;
  color: #382110;
}

.nav-home {
  position: absolute;
  left: 320px;
  margin-left: 10px;
  text-decoration: none;
  color: #382110;
  height: 50px;
  cursor: pointer;
  padding: 0 10px;
  font-family: "Merriweather", "Georgia", serif;

}

.nav-home:hover {
  background: #382110;
  color: white;
}

.nav-home h5 {
  position: relative;
  top: 17px;
}
.nav-my-books {
  position: absolute;
  left: 410px;
  text-decoration: none;
  color: #382110;
  height: 50px;
  cursor: pointer;
  padding: 0 10px;
}

.nav-my-books:hover {
  background: #382110;
  color: white;
}

.nav-my-books h5 {
  position: relative;
  top: 17px;
}

.logged-out-buttons {
  list-style: none;
  display: flex;
  margin-right: 120px;

}

.logged-out-buttons li {
  padding: 5px;
  font-size: 14px;
  border: 1px solid #382110;
  border-radius: 3px;
  margin-left: 5px;
  text-decoration: none;
  background: #382110;
}

.log-button {
  text-decoration: none;
  color: white;
  padding: 10px 7px;
}

.logged-out-buttons li:hover {
  background: #654321;
  border: 1px solid #654321;
}
.logged-in-stuff {
  list-style: none;
  display: flex;
  margin-right: 120px;
  align-items: center;
}

.logged-in-stuff li {
  padding: 5px;
}

.logout-button {
  padding: 5px;
  font-size: 14px;
  border: 1px solid #382110;
  border-radius: 3px;
  margin-left: 5px;
  text-decoration: none;
  background: #382110;
  color: white;
  cursor: pointer;
  font-family: "Merriweather";
}

.logout-button:hover {
  background: #654321;
  border: 1px solid #654321;
}

.demo-button {
  padding: 5px;
  font-size: 14px;
  border: 1px solid #382110;
  border-radius: 3px;
  margin-left: 5px;
  text-decoration: none;
  background: #382110;
  color: white;
  cursor: pointer;
  font-family: "Merriweather";
}

.demo-button:hover {
  background: #654321;
  border: 1px solid #654321;
}


footer {
  display: flex;
  color: #382110;
  background: #F4F1EA;
  align-items: center;
  justify-content: center;
  position: fixed;
  bottom:0;
  left:0;
  right:0;
  height:30px;
  font-size: 12px;
}

footer li {
  list-style: none;
}

